[gd_scene load_steps=2 format=3 uid="uid://02a8os0ufwr4"]

[ext_resource type="Script" path="res://Scripts/level_title.gd" id="1_b0cut"]

[node name="LevelTitle" type="CanvasLayer"]
script = ExtResource("1_b0cut")

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="TitleLabel" type="Label" parent="."]
offset_top = -28.0
offset_right = 320.0
offset_bottom = -2.0
horizontal_alignment = 1

[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
